--- a/assets/notebooks/customer-churn-prediction.ipynb
+++ b/assets/notebooks/customer-churn-prediction.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "89d4ad1d242e4526803c8ad7379fbff6",
     "tags": []
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "id": "4464d4d7-a3c5-4b52-96c6-57b2d3f853d2",
     "tags": []
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current branch     : optimize-churn-model\n",
+      "Current branch     : dev\n",
       "Current environment: dev\n"
      ]
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "id": "8eed8bc2-f317-4b21-addc-769c43651aa1",
     "tags": []
@@ -416,7 +416,7 @@
        "[10 rows x 26 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "id": "6838eb7d1a0543e698a069648b8296c4",
     "tags": []
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "id": "082f5174c293460f8db2ccfe222fc384",
     "tags": []
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "id": "c872708dd0234402b620729acf287fc6",
     "tags": []
@@ -636,7 +636,7 @@
        "4        N  34.266667     F  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "id": "6b665dc0-2b67-420c-877f-6035fe8ae710",
     "tags": []
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "id": "f050819d-c047-4c53-9e68-efc2aa1f4d42",
     "tags": []
@@ -858,7 +858,7 @@
        "4        N  34.266667      0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "id": "fcb7815d-ffa3-436d-92d9-956431ac1069",
     "tags": []
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "id": "35c1ced6e96e4b1786088ccccb09ac96",
     "tags": []
@@ -900,7 +900,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "id": "18695ef9-d548-427e-8060-932ee5816e66",
     "tags": []
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "id": "2a0e64d2-f4b1-4c0f-8296-a267f329486b",
     "tags": []
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "id": "7792c9e2-0c1c-45a3-bd4c-c3a4b9fc030e",
     "tags": []
@@ -997,7 +997,7 @@
        "                ('RandonForestClassifier', RandomForestClassifier())])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "id": "6ae58987-a618-4f02-9120-0cbee9dd7716",
     "tags": []
@@ -1029,12 +1029,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.98      0.92      0.95       168\n",
-      "         1.0       0.89      0.97      0.93       115\n",
+      "         0.0       0.98      0.95      0.96       168\n",
+      "         1.0       0.93      0.97      0.95       115\n",
       "\n",
-      "    accuracy                           0.94       283\n",
-      "   macro avg       0.93      0.95      0.94       283\n",
-      "weighted avg       0.94      0.94      0.94       283\n",
+      "    accuracy                           0.96       283\n",
+      "   macro avg       0.95      0.96      0.96       283\n",
+      "weighted avg       0.96      0.96      0.96       283\n",
       "\n"
      ]
     }
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "id": "07281e76-186f-4d8e-9da1-d6dfa621115f",
     "tags": []
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "id": "6958e963-1a51-43c1-8408-f6305618c96f",
     "tags": []
@@ -1108,7 +1108,7 @@
        "'SUCCESS'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "id": "fcc286a0-27a6-4d4c-9603-61b677d642e0",
     "tags": []
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "id": "6bcea826-7ac2-4e8b-8272-d27f54bd95cb",
     "tags": []
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "id": "478f8218-af4e-47f6-a6af-0950bd10352d",
     "tags": []
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "id": "e65dcc3c-74fa-4381-846a-315e313fa082",
     "tags": []
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "id": "b800dc4e-359a-4233-a2e6-84938172ad9d",
     "tags": []
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "id": "4cfc9142-43cb-436f-99a1-d331b3deda88",
     "tags": []
@@ -1341,7 +1341,7 @@
      "text": [
       "------------------------------------  --------------  ------------------------  -----------------\n",
       "ID                                    NAME            CREATED                   TYPE\n",
-      "f784874f-12ba-453b-a177-eb52b3174b49  churn_pipeline  2022-04-25T14:56:32.002Z  scikit-learn_0.23\n",
+      "1790506d-1270-4a65-9a94-a2a82821f668  churn_pipeline  2022-04-25T15:43:40.002Z  scikit-learn_0.23\n",
       "------------------------------------  --------------  ------------------------  -----------------\n"
      ]
     }
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "id": "6d60e8a1-34bc-41f3-93e7-daebd4493bf1",
     "tags": []
@@ -1384,17 +1384,17 @@
        "     'type': 'DataFrame'},\n",
        "    'type': 'fs'}],\n",
        "  'type': 'scikit-learn_0.23'},\n",
-       " 'metadata': {'created_at': '2022-04-25T14:56:32.104Z',\n",
-       "  'id': 'f784874f-12ba-453b-a177-eb52b3174b49',\n",
-       "  'modified_at': '2022-04-25T14:56:34.422Z',\n",
+       " 'metadata': {'created_at': '2022-04-25T15:43:40.543Z',\n",
+       "  'id': '1790506d-1270-4a65-9a94-a2a82821f668',\n",
+       "  'modified_at': '2022-04-25T15:43:42.517Z',\n",
        "  'name': 'churn_pipeline',\n",
-       "  'owner': '1000331007',\n",
-       "  'resource_key': 'b3efece8-0cb1-4b35-94b4-da9a84f73757',\n",
-       "  'space_id': '4f4d0992-8825-47ea-a61a-37ef4a89211b'},\n",
+       "  'owner': '1000331004',\n",
+       "  'resource_key': '6e1a39ac-4661-4536-aa33-8dba267d560a',\n",
+       "  'space_id': '1f6d7c6d-0f4b-4790-a3dc-13414b4252de'},\n",
        " 'system': {'warnings': [{'message': 'Software specification default_py3.7_opence specified for the wml_model is deprecated and will be removed in the future. Please use a supported software specification instead. For details see Supported Frameworks https://www.ibm.com/docs/en/cloud-paks/cp-data/4.0?topic=specifications-supported-deployment-frameworks'}]}}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "id": "ee7ee4b2-e8dc-40fc-af0e-a55f51a030ab",
     "tags": []
@@ -1420,19 +1420,19 @@
       "\n",
       "#######################################################################################\n",
       "\n",
-      "Synchronous deployment creation for uid: 'f784874f-12ba-453b-a177-eb52b3174b49' started\n",
+      "Synchronous deployment creation for uid: '1790506d-1270-4a65-9a94-a2a82821f668' started\n",
       "\n",
       "#######################################################################################\n",
       "\n",
       "\n",
       "initializing\n",
       "Note: Software specification default_py3.7_opence is deprecated. Use runtime-22.1-py3.9 software specification instead when saving a model. For details, see https://www.ibm.com/docs/en/cloud-paks/cp-data/4.0?topic=specifications-software-hardware-deployments.\n",
-      "..............................................\n",
+      "\n",
       "ready\n",
       "\n",
       "\n",
       "------------------------------------------------------------------------------------------------\n",
-      "Successfully finished deployment creation, deployment_uid='9aab5c2f-4681-4bf0-87bd-4c6dcb96572a'\n",
+      "Successfully finished deployment creation, deployment_uid='a4a4137b-a033-4091-ba9b-cef0d21fc153'\n",
       "------------------------------------------------------------------------------------------------\n",
       "\n",
       "\n"
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "id": "f480d949-f24b-43a4-a814-f4fa1c32ba57",
     "tags": []
@@ -1462,7 +1462,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://internal-nginx-svc.cpd-instance.svc.cluster.local:12443/ml/v4/deployments/9aab5c2f-4681-4bf0-87bd-4c6dcb96572a/predictions\n"
+      "https://internal-nginx-svc.cpd-instance.svc.cluster.local:12443/ml/v4/deployments/a4a4137b-a033-4091-ba9b-cef0d21fc153/predictions\n"
      ]
     }
    ],
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "id": "6667bc4e-22a3-4cbb-ba79-785d048c97ae",
     "tags": []
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {
     "id": "e3277c48-c12e-455a-8abd-b5af86fcb28f",
     "tags": []
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {
     "id": "d26c5cf2-fe85-4677-998d-430e4571a860",
     "tags": []
@@ -1543,11 +1543,11 @@
      "text": [
       "------------------------------------  --------------  ------------------------  -----------------\n",
       "ID                                    NAME            CREATED                   TYPE\n",
-      "f784874f-12ba-453b-a177-eb52b3174b49  churn_pipeline  2022-04-25T14:56:32.002Z  scikit-learn_0.23\n",
+      "1790506d-1270-4a65-9a94-a2a82821f668  churn_pipeline  2022-04-25T15:43:40.002Z  scikit-learn_0.23\n",
       "------------------------------------  --------------  ------------------------  -----------------\n",
       "------------------------------------  -------------------------  -----  ------------------------\n",
       "GUID                                  NAME                       STATE  CREATED\n",
-      "9aab5c2f-4681-4bf0-87bd-4c6dcb96572a  churn_pipeline_deployment  ready  2022-04-25T14:56:36.329Z\n",
+      "a4a4137b-a033-4091-ba9b-cef0d21fc153  churn_pipeline_deployment  ready  2022-04-25T15:43:43.892Z\n",
       "------------------------------------  -------------------------  -----  ------------------------\n"
      ]
     }
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {
     "id": "3ccd14d0-7290-430d-adc9-6c525875b2d0",
     "tags": []
@@ -1586,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {
     "id": "e6221c43-ecbd-4595-a77f-9092e9bc644f",
     "tags": []
